# jdb_to_nwb

./: .gitignore  FAQs.md  IM-1478_07192022.nwb  LICENSE  README.md  base_nwb.nwb  berke_lab_metadata.yml  convert_ephys.ipynb  create_nwb.ipynb  example_code.ipynb  metadata_IM-1478_07192022.yml  metadata_example.yaml  metadata_example.yml  metadata_example_Jose.yaml  metadata_example_Tim.yaml  metadata_fully_explained.yaml  neuropixels_channel_map.ipynb  neuropixels_to_nwb.ipynb  pyproject.toml  read_ephys_network.py  stitch_photometry.ipynb  test_plots.ipynb
.github/workflows/: publish_to_pypi.yml  ruff.yml  test_package_build.yml
examples/: README.md  plot_probability_matching_example.py
frank_lab/: Add_Behavior_to_NWB.ipynb  convert_behavior_Frank.py  convert_behavior_Frank_lab.ipynb  convert_behavior_Frank_lab.py  convert_behavior_example.ipynb
frank_lab/position_tracking/: Get_Hex_Centroids.ipynb  README.md  Xulu_hex_coordinates.xlsx  hex_coordinates.csv
frank_lab/position_tracking/video_files/: maze_with_permanent_barriers.h264
metadata/: metadata_IM-1788_20241219.yaml  metadata_IM-1788_20241221.yaml  metadata_IM-1833_20250306.yaml
notebook/: read_phot_box_files.ipynb
notebooks/: convert_behavior_Frank_lab.ipynb
output/IM-1788_20241219_logs/: IM-1788_20241219_metadata.yaml
output/IM-1788_20241221(1)/IM-1788_20241221_logs/: IM-1788_20241221_metadata.yaml
output/IM-1788_20241221_logs/: IM-1788_20241221_metadata.yaml
output/IM-1833_20250306_logs/: IM-1833_20250306_metadata.yaml
resources/: 3mm_probe_66um_pitch_electrode_coords.csv  6mm_probe_80um_pitch_electrode_coords.csv  Get_Hex_Centroids.ipynb  README.md  channel_map.csv  ecog_channels.yaml  ephys_devices.yaml  generate_electrode_coordinates.ipynb  generate_neuropixels_channel_map.ipynb  neuropixels_2.0_multishank_electrode_coords.csv  photometry_devices.yaml  photometry_mappings.yaml  settings_3.xml  virus_info.yaml
resources/electrophysiology/: 252ch_probe_4mm_length_80um_pitch_coords.csv  252ch_silicon_probe_10mm_length_100um_pitch_electrode_coords.csv  252ch_silicon_probe_channel_map.csv  256ch_probe_3mm_length_66um_pitch_coords.csv  256ch_probe_6mm_length_80um_pitch_coords.csv  256ch_silicon_probe_channel_map.csv  README.md  generate_electrode_coordinates.ipynb  neuropixels_2.0_multishank_electrode_coords.csv  preview_ephys.ipynb
resources/frank_lab/centroids/: 20240222_MazeNoBarriers_hex_coordinates.csv  20240530_BraveLu_hex_coordinates.csv  20240629_Hexmaze_hex_coordinates.csv  20241123_Mario_hex_coordinates.csv  20250210_Luna_hex_coordinates.csv  20251222_Lily_hex_coordinates.csv  20260609_Nova_hex_coordinates.csv
resources/frank_lab/video_files/: 20240222_MazeNoBarriers.1.h264  20240530_BraveLu_Maze_No_Barrier.1.h264  20241123_Mario_Hexmaze_NoBarriers.1.h264  20250210_Luna_Hexmaze_NoBarriers.h264  20251222_Lily_Hexmaze_NoBarriers.1.h264
resources/photometry/: README.md  crop_photometry.ipynb  photometry_devices.yaml  photometry_mappings.yaml  processing_presets.yaml  virus_info.yaml
src/jdb_to_nwb/: __init__.py  convert.py  convert_behavior.py  convert_dlc.py  convert_photometry.py  convert_photometry_mat_to_pyth.py  convert_position.py  convert_raw_ephys.py  convert_spikes.py  convert_video.py  mdasortinginterface.py  timestamps_alignment.py  utils.py
src/jdb_to_nwb/plotting/: plot_behavior.py  plot_combined.py  plot_ephys.py  plot_photometry.py
src/plotting/: plot_ephys.py  plot_photometry.py
tests/: Phot_to_signal.ipynb  compare_nwb_and_LV.ipynb  conftest.py  create_processed_ephys_test_data.py  create_raw_ephys_test_data.py  create_spike_test_data.py  download_test_data.py  generate_photometry_reference_data.ipynb  generate_reference_data.ipynb  metadata.yaml  metadata_IM-1788_20241219.yaml  metadata_example.yaml  metadata_full.yaml  test_convert_behavior.py  test_convert_dlc.py  test_convert_general.py  test_convert_photometry.ipynb  test_convert_photometry.py  test_convert_position.py  test_convert_raw_ephys.py  test_convert_spikes.py  test_convert_video.py  test_timestamp_functions.py
tests/test_data/behavior/: ArduinoStamps0.csv  arduinoraw0.txt  barriers.txt
tests/test_data/processed_ephys/: firings.mda  geom.csv  impedance.csv
tests/test_data/raw_ephys/: new_format_settings.xml
tests/test_data/raw_ephys/2022-07-25_15-30-00/: settings.xml
tests/test_data/raw_ephys/2022-07-25_15-30-00/experiment1/recording1/: structure.oebin
tests/test_data/raw_ephys/2022-07-25_15-30-00/experiment1/recording1/continuous/Rhythm_FPGA-100.0/: timestamps.npy
