[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jdb_to_nwb"
authors = [
  { name="Stephanie Crater" },
  { name="Ryan Ly" },
  { name="Yang-Sun Hwang" },
  { name="Jose Figueroa" },
]
maintainers = [
  { name="Stephanie Crater", email="stephcrater@berkeley.edu" },
]
description = "Converts electrophysiology, photometry, and behavioral data for the hex maze task used by the Berke Lab at UCSF to NWB format for sharing and analysis."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "spikeinterface >= 0.101.0",
    "tqdm",
    "neuroconv",
    "pynwb == 3.0",
    "ndx-fiber-photometry",
    "ndx-franklab-novela",
    "scikit-learn",
    "matplotlib",
    "imageio-ffmpeg",
    "ffmpeg-python",
    "tables",  # used by pandas to read HDF5 files
    "opencv-python",
    "hex-maze-neuro",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "codespell",
]
test = ["pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/calderast/jdb_to_nwb/"
"Bug Tracker" = "https://github.com/calderast/jdb_to_nwb/issues"

[project.scripts]
jdb_to_nwb = "jdb_to_nwb.convert:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# this file is created/updated when the package is installed and used in
# src/jdb_to_nwb/__init__.py to set `jdb_to_nwb.__version__`
version-file = "src/jdb_to_nwb/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".git*",
    ".codecov.yml",
    ".readthedocs.yaml",
    ".pre-commit-config.yaml",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/jdb_to_nwb",
    "resources",
]
exclude = [
    ".git*",
    ".codecov.yml",
    ".readthedocs.yaml",
    ".pre-commit-config.yaml",
]

# Rewrite the path to the `resources` directory to `jdb_to_nwb/resources`.
# `jdb_to_nwb/__init__.py` will look there first for the spec files.
# The resulting directory structure within the wheel will be:
# jdb_to_nwb/
# ├── __init__.py
# ├── resources/
# └── plotting
[tool.hatch.build.targets.wheel.sources]
"resources" = "jdb_to_nwb/resources"

# [tool.interrogate]
# fail-under = 95
# verbose = 1

[tool.codespell]
skip = "htmlcov,.git,.mypy_cache,.pytest_cache,.coverage,*.pdf,*.svg,venvs,./tests/test_data/*,*.h264"
ignore-words-list = "datas,assertIn,lockin,SEMs"

[tool.coverage.run]
branch = true
source = ["jdb_to_nwb"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.black]
line-length = 120
preview = true
exclude = ".git|.mypy_cache|.tox|.venv|venv|.ipynb_checkpoints|_build/|dist/|__pypackages__|.ipynb"

[tool.ruff]
lint.select = ["E", "F", "T100", "T203"]
exclude = [
  ".git",
  ".tox",
  "__pycache__",
  "build/",
  "dist/",
  "*.ipynb",
]
line-length = 120

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.mccabe]
max-complexity = 17
